@@ -125,4 +125,7 @@ Version 20080224.139 (Tuesday, July 29, 2008)
    general.useragent.locale has been modified.
 
 Version ${Version} (${Date})
+ - Added support for Songbird.
+ - Added support for alpha versions of Firefox 3.1.
+ - Added support for the googlebar, StumbleUpon, and Venkman extensions.
  - Vinova can now be automatically disabled on webpages via a hidden preference.
